correction layout bugs

--- a/src/components/Activity/style.scss
+++ b/src/components/Activity/style.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   max-height: 320px;
+  min-height: 320px;
   background-color: $background-light;
   padding:40px;
   border-radius: 5px;
