--- a/src/components/Performance/style.scss
+++ b/src/components/Performance/style.scss
@@ -4,7 +4,6 @@
   position:relative;
   width: 100%;
   height: 100%;
-  min-width: 300px;
 
   padding: 20px 0px;
   border-radius: 5px;
