--- a/src/pages/Profile/style.scss
+++ b/src/pages/Profile/style.scss
@@ -8,36 +8,50 @@
   width: 100%;
 
   &__stats {
+    display: flex;
+    flex-grow: 3;
+    gap:3%;
     width: 100%;
     margin-top: 30px;
     margin-bottom: 50px;
-  }
+    justify-content: center;
+    align-items: flex-start;
 
-  &__card-infos {
-    max-width: 220px;
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap:30px;
-  }
+    &__infos {
+      display: flex;
+      gap: 30px;
+      width: 30%;
+      max-width: 220px;
+      display:flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
 
-  &__activity {
-    height: 100%;
-    width: 100%;
+    &__graphs {
+      display:flex;
+      flex-direction: column;
+      justify-content: space-between;
+      flex-grow: 1;
+      gap: 30px;
+      min-width:68%;
+    }
   }
 
   &__rating {
-    flex-wrap: wrap!important;
-    height: 100%;
-    width: 100%;    
-    max-height: 250px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: stretch;
+    gap: 30px;
 
     li {
-      flex-wrap: wrap!important;
-      flex-grow: 3;
-      min-width: 300px;
-      max-width: 480px;
-      height: 100%;
+      flex: 1;
+      min-height: 270px;
+      width: 100%;
+      min-width: 280px;
     }
   }
+
 }
