--- a/src/scss/_bases.scss
+++ b/src/scss/_bases.scss
@@ -22,8 +22,11 @@ code {
   font-weight: 400;
 
   .main-container {
+    padding-top: 90px;
+    padding-left:120px;
     flex-grow: 1;
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
   }
